--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,8 +1,8 @@
 body{
-    background-color: lightskyblue;
+    background-color: rgb(128, 221, 135);
 }
 .col{
-    background-color: white;
+    background-color: rgb(166, 248, 230);
 }
 .container{
     margin-top:20px;
