--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,8 +1,8 @@
 body{
-    background-color: rgb(128, 221, 135);
+    background-color: #23CE6B;
 }
 .col{
-    background-color: rgb(150, 247, 206);
+    background-color: #A9F7CC;
 }
 .container{
     margin-top:20px;
